prodMetadata/src/objects/Detailed_Deployment_Information__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Detailed Deployment Information</relationshipLabel>
        <relationshipName>Detailed_Deployment_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OEF_OIF__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gulf War</fullName>
                </value>
                <value>
                    <fullName>Korean War</fullName>
                </value>
                <value>
                    <fullName>OEF</fullName>
                </value>
                <value>
                    <fullName>OIF</fullName>
                </value>
                <value>
                    <fullName>OND</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Peacetime</fullName>
                </value>
                <value>
                    <fullName>Vietnam War</fullName>
                </value>
                <value>
                    <fullName>World War II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop-Loss</label>
        <type>Checkbox</type>
    </fields>
    <label>Detailed Deployment Information</label>
    <nameField>
        <displayFormat>DDI-{000000}</displayFormat>
        <label>Detailed Deployment Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detailed Deployment Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>